--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,8 @@ h1 {
 /* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
+  width: 29.33%;
+  margin: 1em;
 }
 
 /* Clear floats after rows */
@@ -46,6 +47,7 @@ h1 {
 .content {
   background-color: white;
   padding: 2em;
+  margin: 0px
 }
 
 /* The "show" class is added to the filtered elements */
